# fastat

./: Cargo.toml  LICENSE  README.md  bench.md
src/: main.rs
