[package]
name = "fastat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
kseq = "0.2"
clap = "3.1"
flate2 = { version = ">=1.0.17", features = ["zlib-ng-compat"], default-features = false }
memchr = "2.4"
byte-unit = "4.0"
rayon = "1.5"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[profile.release]
strip = "debuginfo"
